Cleans up some text colors and whitespace issues.

--- a/frontend/src/app/search-topics/search-topics.component.scss
+++ b/frontend/src/app/search-topics/search-topics.component.scss
@@ -32,6 +32,6 @@ button {
 .parent-topics,
 ::ng-deep .parent-topics mat-list-item,
 .select-topic {
-  width: 300px;
-  height: 36px;
+  min-width: 320px;
+  min-height: 36px;
 }
